vlib/v/checker/tests/array_declare_element_c.vv
fn main() {
	arr := [[1, 2], [0, 3]]
	arr[1][0] := 1
}
